--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.link{
+  list-style: none;
+  display: flex;
+  padding-left: 450px;
+  padding-top: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.link-item{
+  font-family: 'source code pro';
+  margin: 0px 10px;
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+  width: 100px;
+  text-decoration: none;
+}
+
+.card{
+  width: 550px;
+  margin-left: 250px;
+}
+
+.todo-center{
+  text-align: center;
+}
+
+.todo-form{
+  display: flex;
+  margin:10px 200px;
+}
+
+.todo-btn{
+  margin: 0px 10px;
+  width: 100px;
+  font-family: 'source code pro';
+  font-weight: bolder;
+  font-size: 18px;
+}
+
+.todo-input{
+  font-family: 'source code pro';
+  font-size: 16px;
+  font-weight: 300px;
+  
 }
